@@ -45,6 +45,7 @@ Incompatible changes
 * ``Builder.env`` is not filled at instantiation
 * #3594: LaTeX: single raw directive has been considered as block level element
 * #3639: If ``html_experimental_html5_writer`` is available, epub builder use it by default.
+* ``Sphinx.add_source_parser()`` raises an error if duplicated
 
 Features removed
 ----------------
